--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build the project
         run: npm run build
 
-      - name: Deploy to GitHub Pages
+      - name: https://github.com/ercansahin16/RandomImage
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
